test/conformance/chainsaw/ttl/past-timestamp/past-timestamp.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-2
  labels:
    cleanup.kyverno.io/ttl: 2023-07-19T120000Z
