test/conformance/chainsaw/ttl/past-timestamp/pod-2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-2
spec:
  containers:
  - image: nginx:latest
    name: nginx
