test/conformance/chainsaw/ttl/past-timestamp/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  labels:
    cleanup.kyverno.io/ttl: 2023-07-19T120000Z
spec:
  containers:
  - image: nginx:latest
    name: nginx
