test/conformance/chainsaw/ttl/past-timestamp/pod-assert-2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-2
