test/conformance/chainsaw/ttl/past-timestamp/04-patch.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  name: patch
spec:
  try:
  - apply:
      file: past-timestamp.yaml
