test/conformance/chainsaw/ttl/past-timestamp/05-check.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  name: check
spec:
  try:
  - error:
      file: pod-assert-2.yaml
