test/conformance/chainsaw/ttl/past-timestamp/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: past-timestamp
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: pod.yaml
  - name: step-02
    try:
    - error:
        file: pod-assert.yaml
  - name: step-03
    try:
    - apply:
        file: pod-2.yaml
    - assert:
        file: pod-assert-2.yaml
  - name: step-04
    try:
    - apply:
        file: past-timestamp.yaml
  - name: step-05
    try:
    - error:
        file: pod-assert-2.yaml
